--- a/fastapi-sqlalchemy/pyproject.toml
+++ b/fastapi-sqlalchemy/pyproject.toml
@@ -11,6 +11,7 @@ SQLAlchemy = {extras = ["mypy"], version = "^1.4.23"}
 alembic = "^1.7.1"
 strawberry-graphql = {extras = ["asgi"], version = "^0.77.0"}
 fastapi = "^0.68.1"
+passlib = "^1.7.4"
 
 
 [tool.poetry.dev-dependencies]
