--- a/fastapi-sqlalchemy/pyproject.toml
+++ b/fastapi-sqlalchemy/pyproject.toml
@@ -12,6 +12,7 @@ alembic = "^1.7.1"
 strawberry-graphql = {extras = ["asgi"], version = "^0.77.0"}
 fastapi = "^0.68.1"
 passlib = "^1.7.4"
+itsdangerous = "^2.0.1"
 
 
 [tool.poetry.dev-dependencies]
