--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
     rev: v2.3.2
     hooks:
       - id: prettier
-        files: '^docs/.*\.mdx?$'
+        files: '.*\.mdx?$'
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
