--- a/django-dataloader/setup.cfg
+++ b/django-dataloader/setup.cfg
@@ -1,6 +1,6 @@
 [mypy]
 plugins =
-  strawberry.ext.mypy_plugin,mypy_django_plugin.main
+  mypy_django_plugin.main,strawberry.ext.mypy_plugin
 
 [mypy.plugins.django-stubs]
 django_settings_module = "main.settings"
