--- a/reddit-clone/pyproject.toml
+++ b/reddit-clone/pyproject.toml
@@ -12,6 +12,7 @@ alembic = "^1.7.1"
 asyncpg = "^0.24"
 strawberry-graphql = {extras = ["asgi"], version = "^0.77.0"}
 fastapi = "^0.68.1"
+starlette = "^0.14"
 
 
 [tool.poetry.dev-dependencies]
