--- a/reddit-clone/pyproject.toml
+++ b/reddit-clone/pyproject.toml
@@ -13,6 +13,7 @@ asyncpg = "^0.24"
 strawberry-graphql = {extras = ["asgi"], version = "^0.77.0"}
 fastapi = "^0.68.1"
 starlette = "^0.14"
+graphql-relay = "^3.1.0"
 
 
 [tool.poetry.dev-dependencies]
