--- a/reddit-clone/pyproject.toml
+++ b/reddit-clone/pyproject.toml
@@ -14,6 +14,7 @@ strawberry-graphql = {extras = ["asgi"], version = "^0.77.0"}
 fastapi = "^0.68.1"
 starlette = "^0.14"
 graphql-relay = "^3.1.0"
+aiosmtplib = "^1.1.6"
 
 
 [tool.poetry.dev-dependencies]
