update setup instructions

--- a/reddit-clone/.env.example
+++ b/reddit-clone/.env.example
@@ -1,8 +1,7 @@
+DATABASE_URI=postgresql+asyncpg://localhost/db_name?user=postgres&password=postgres
+MAIL_HOST=127.0.0.1
+MAIL_PORT=25
 DEBUG=
-DATABASE_URI=
-SECRET_KEY=
-MAIL_HOST=
-MAIL_PORT=
 MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_SENDER=
