--- a/reddit-clone/pyproject.toml
+++ b/reddit-clone/pyproject.toml
@@ -15,6 +15,7 @@ fastapi = "^0.68.1"
 starlette = "^0.14"
 graphql-relay = "^3.1.0"
 aiosmtplib = "^1.1.6"
+schematics = "^2.1.1"
 
 
 [tool.poetry.dev-dependencies]
