--- a/reddit-clone/pyproject.toml
+++ b/reddit-clone/pyproject.toml
@@ -16,6 +16,7 @@ starlette = "^0.14"
 graphql-relay = "^3.1.0"
 aiosmtplib = "^1.1.6"
 schematics = "^2.1.1"
+argon2-cffi = "^21.1.0"
 
 
 [tool.poetry.dev-dependencies]
