--- a/reddit-clone/pyproject.toml
+++ b/reddit-clone/pyproject.toml
@@ -8,15 +8,16 @@ authors = ["Aryan Iyappan <aryaniyappan2006@gmail.com>"]
 python = "^3.7"
 uvicorn = {extras = ["standard"], version = "^0.15.0"}
 SQLAlchemy = {extras = ["mypy"], version = "^1.4.23"}
+strawberry-graphql = {extras = ["asgi"], version = "^0.77.0"}
+passlib = {extras = ["argon2"], version = "^1.7.4"}
 alembic = "^1.7.1"
 asyncpg = "^0.24"
-strawberry-graphql = {extras = ["asgi"], version = "^0.77.0"}
 fastapi = "^0.68.1"
 starlette = "^0.14"
 graphql-relay = "^3.1.0"
 aiosmtplib = "^1.1.6"
 schematics = "^2.1.1"
-passlib = "^1.7.4"
+jinja2 = "^3.0.2"
 
 
 [tool.poetry.dev-dependencies]
