--- a/reddit-clone/pyproject.toml
+++ b/reddit-clone/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "reddit-graphql"
 version = "0.1.0"
-description = "A reddit API clone built with GraphQL."
+description = "A Reddit API clone built with GraphQL."
 authors = ["Aryan Iyappan <aryaniyappan2006@gmail.com>"]
 
 [tool.poetry.dependencies]
@@ -18,6 +18,7 @@ graphql-relay = "^3.1.0"
 aiosmtplib = "^1.1.6"
 schematics = "^2.1.1"
 jinja2 = "^3.0.2"
+aiofiles = "^0.7.0"
 
 
 [tool.poetry.dev-dependencies]
