--- a/reddit-clone/.env.example
+++ b/reddit-clone/.env.example
@@ -1,6 +1,7 @@
 DATABASE_URI=postgresql+asyncpg://localhost/db_name?user=postgres&password=postgres
 MAIL_HOST=127.0.0.1
 MAIL_PORT=25
+CELERY_BROKER=redis://localhost:6379
 DEBUG=
 MAIL_USERNAME=
 MAIL_PASSWORD=
