--- a/reddit-clone/pyproject.toml
+++ b/reddit-clone/pyproject.toml
@@ -13,11 +13,11 @@ passlib = {extras = ["argon2"], version = "^1.7.4"}
 alembic = "^1.7.1"
 asyncpg = "^0.24"
 graphql-relay = "^3.1.0"
-aiosmtplib = "^1.1.6"
 schematics = "^2.1.1"
 jinja2 = "^3.0.2"
 aiofiles = "^0.7.0"
 starlette = "^0.16.0"
+celery = "^5.1.2"
 
 
 [tool.poetry.dev-dependencies]
