--- a/reddit-clone/.env.example
+++ b/reddit-clone/.env.example
@@ -2,6 +2,7 @@ DATABASE_URI=postgresql+asyncpg://localhost/db_name?user=postgres&password=postg
 MAIL_HOST=127.0.0.1
 MAIL_PORT=25
 CELERY_BROKER=redis://localhost:6379
+CELERY_BACKEND=
 DEBUG=
 MAIL_USERNAME=
 MAIL_PASSWORD=
