update Dockerfile to python 3.9

--- a/reddit-clone/.env.example
+++ b/reddit-clone/.env.example
@@ -1,3 +1,4 @@
+# app
 DATABASE_URI=postgresql+asyncpg://localhost/db_name?user=postgres&password=postgres
 MAIL_HOST=127.0.0.1
 MAIL_PORT=25
@@ -7,3 +8,9 @@ DEBUG=
 MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_SENDER=
+
+# database
+POSTGRES_SERVER=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
