update docker file

--- a/reddit-clone/.env.example
+++ b/reddit-clone/.env.example
@@ -2,8 +2,8 @@
 DATABASE_URI=postgresql+asyncpg://localhost/db_name?user=postgres&password=postgres
 MAIL_HOST=127.0.0.1
 MAIL_PORT=25
-CELERY_BROKER=redis://localhost:6379
-CELERY_BACKEND=
+CELERY_BROKER=
+CELERY_BACKEND=redis://localhost:6379
 DEBUG=
 MAIL_USERNAME=
 MAIL_PASSWORD=
