--- a/reddit-clone/Dockerfile
+++ b/reddit-clone/Dockerfile
@@ -1,13 +1,12 @@
 FROM python:3.9-slim-buster
 
-RUN mkdir /app
+WORKDIR /app/
 
-COPY /reddit /migrations /app/
-COPY /pyproject.toml /poetry.lock /app/
-
-WORKDIR /app
+COPY ./poetry.lock ./pyproject.toml /app/
 
 RUN pip install poetry
 RUN poetry install
+
+COPY ./reddit /app/reddit/
 
 ENTRYPOINT [ "poetry", "run", "uvicorn", "reddit:app" ]
