--- a/reddit-clone/Dockerfile
+++ b/reddit-clone/Dockerfile
@@ -1,12 +1,12 @@
-FROM python:3.9-slim-buster
+FROM python:3.9
 
-WORKDIR /app/
+WORKDIR /app
 
-COPY ./poetry.lock ./pyproject.toml /app/
+COPY ./pyproject.toml ./poetry.lock /app/
 
 RUN pip install poetry
 RUN poetry install
 
 COPY ./reddit /app/reddit/
 
-ENTRYPOINT [ "poetry", "run", "uvicorn", "reddit:app" ]
+CMD [ "poetry", "run", "uvicorn", "reddit:app" ]
