--- a/reddit-clone/docker-compose.yml
+++ b/reddit-clone/docker-compose.yml
@@ -1,8 +1,11 @@
 services:
   database:
     image: postgres:13-alpine
+    restart: unless-stopped
     env_file:
       - ".env"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
 
   redis:
     image: redis:6-alpine
@@ -36,3 +39,6 @@ services:
   #     - redis
   #     - rabbitmq
   #     - app
+
+volumes:
+  postgres-data:
