--- a/reddit-clone/.env.example
+++ b/reddit-clone/.env.example
@@ -1,16 +1,21 @@
 # app
-DATABASE_URI=postgresql+asyncpg://localhost/db_name?user=postgres&password=postgres
+DATABASE_URI=postgresql+asyncpg://localhost/reddit_clone?user=postgres&password=reddit_clone
 MAIL_HOST=127.0.0.1
 MAIL_PORT=25
-CELERY_BROKER=
+CELERY_BROKER=amqp://guest@queue//
 CELERY_BACKEND=redis://localhost:6379
-DEBUG=
+DEBUG=False
 MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_SENDER=
 
 # database
-POSTGRES_SERVER=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
+POSTGRES_SERVER=localhost
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=reddit_clone
+POSTGRES_DB=reddit_clone
+
+# PGadmin
+PGADMIN_LISTEN_PORT=5050
+PGADMIN_DEFAULT_EMAIL=
+PGADMIN_DEFAULT_PASSWORD=
