--- a/reddit-clone/.env.example
+++ b/reddit-clone/.env.example
@@ -17,5 +17,5 @@ POSTGRES_DB=reddit_clone
 
 # PGadmin
 PGADMIN_LISTEN_PORT=5050
-PGADMIN_DEFAULT_EMAIL=
-PGADMIN_DEFAULT_PASSWORD=
+PGADMIN_DEFAULT_EMAIL=admin@reddit-clone.com
+PGADMIN_DEFAULT_PASSWORD=admin
