--- a/reddit-clone/Dockerfile
+++ b/reddit-clone/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9
+FROM python:3.9-slim
 
 WORKDIR /app
 
@@ -11,5 +11,7 @@ RUN poetry install
 
 # copy project files
 COPY ./ ./
+
+EXPOSE 8000
 
 CMD [ "poetry", "run", "uvicorn", "reddit:app", "--host=0.0.0.0" ]
