--- a/reddit-clone/Dockerfile
+++ b/reddit-clone/Dockerfile
@@ -14,4 +14,4 @@ COPY ./ ./
 
 EXPOSE 8000
 
-CMD [ "poetry", "run", "uvicorn", "reddit:app", "--host=0.0.0.0" ]
+CMD poetry run uvicorn reddit:app --host=0.0.0.0
