--- a/reddit-clone/docker-compose.yml
+++ b/reddit-clone/docker-compose.yml
@@ -4,8 +4,10 @@ services:
     image: postgres:14-alpine
     container_name: reddit-clone-postgres
     restart: unless-stopped
-    env_file:
-      - ".env"
+    environment:
+      POSTGRES_DB: reddit_clone
+      POSTGRES_PASSWORD: reddit_clone
+      POSTGRES_USER: reddit_clone
     ports:
       - "5432:5432"
     volumes:
@@ -33,8 +35,16 @@ services:
     build:
       context: .
     container_name: reddit-clone-app
-    env_file:
-      - ".env"
+    environment:
+      DEBUG: "false"
+      CELERY_BROKER: amqp://guest@queue//
+      CELERY_BACKEND: redis://localhost:6379
+      DATABASE_URL: postgres://reddit_clone:reddit_clone@db:5432/reddit_clone
+      MAIL_HOST: 127.0.0.1
+      MAIL_PORT: 25
+      MAIL_USERNAME:
+      MAIL_PASSWORD:
+      MAIL_SENDER:
     ports:
       - "8000:8000"
     depends_on:
@@ -45,8 +55,6 @@ services:
   #   build:
   #     context: .
   #   restart: always
-  #   env_file:
-  #     - ".env"
   #   depends_on:
   #     - redis
   #     - rabbitmq
