update celery deps

--- a/reddit-clone/Dockerfile
+++ b/reddit-clone/Dockerfile
@@ -1,4 +1,5 @@
 FROM python:3.9-slim
+LABEL maintainer="Aryan Iyappan <aryaniyappan2006@gmail.com>"
 
 WORKDIR /app
 
@@ -7,7 +8,7 @@ RUN pip install poetry
 
 # install dependencies
 COPY ./poetry.lock ./pyproject.toml ./
-RUN poetry install
+RUN poetry install --no-dev
 
 # copy project files
 COPY ./ ./
