--- a/reddit-clone/pyproject.toml
+++ b/reddit-clone/pyproject.toml
@@ -10,6 +10,7 @@ uvicorn = {extras = ["standard"], version = "^0.15.0"}
 SQLAlchemy = {extras = ["mypy"], version = "^1.4.23"}
 strawberry-graphql = {extras = ["asgi"], version = "^0.82.2"}
 passlib = {extras = ["argon2"], version = "^1.7.4"}
+celery = {extras = ["redis", "librabbitmq"], version = "^5.1.2"}
 alembic = "^1.7.1"
 asyncpg = "^0.24"
 graphql-relay = "^3.1.0"
@@ -17,7 +18,6 @@ schematics = "^2.1.1"
 jinja2 = "^3.0.2"
 aiofiles = "^0.7.0"
 starlette = "^0.16.0"
-celery = "^5.1.2"
 
 
 [tool.poetry.dev-dependencies]
