update docker config

--- a/reddit-clone/Dockerfile
+++ b/reddit-clone/Dockerfile
@@ -1,14 +1,15 @@
 FROM python:3.9-slim
 LABEL maintainer="Aryan Iyappan <aryaniyappan2006@gmail.com>"
 
-WORKDIR /app
+ARG APP_HOME=/app/
+WORKDIR ${APP_HOME}
 
 # install poetry
 RUN pip install poetry
 
 # install dependencies
-COPY ./poetry.lock ./pyproject.toml ./
+COPY ./poetry.lock ./pyproject.toml ${APP_HOME}
 RUN poetry install --no-dev
 
 # copy project files
-COPY ./ ./
+COPY ./ ${APP_HOME}
