--- a/reddit-clone/docker-compose.yml
+++ b/reddit-clone/docker-compose.yml
@@ -18,9 +18,9 @@ services:
     networks:
       - reddit-proxy
     ports:
-      - "8000:8000"
+      - 80:80
     volumes:
-      - ./nginx/nginx.conf:/tmp/nginx.conf
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
 
@@ -29,7 +29,7 @@ services:
     image: reddit-app
     container_name: reddit-app
     restart: always
-    command: poetry run uvicorn reddit:app --host=0.0.0.0 --port=5000
+    command: poetry run uvicorn reddit:app --host=0.0.0.0 --port=8080
     environment: *base-environment
     networks:
       - reddit-main
@@ -65,7 +65,7 @@ services:
     networks:
       - reddit-main
     ports:
-      - "5432:5432"
+      - 5432:5432
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
@@ -78,7 +78,7 @@ services:
     networks:
       - reddit-main
     ports:
-      - "6379:6379"
+      - 6379:6379
     volumes:
       - redis-data:/data
     healthcheck:
@@ -97,7 +97,7 @@ services:
     networks:
       - reddit-main
     ports:
-      - "5672:5672"
+      - 5672:5672
     volumes:
       - rabbitmq-data:/data
     healthcheck:
