--- a/reddit-clone/nginx/nginx.conf
+++ b/reddit-clone/nginx/nginx.conf
@@ -1,6 +1,7 @@
 server {
-  listen 80;
-  location / {
-    proxy_pass http://5000;
-  }
+    listen 80;
+
+    location / {
+        proxy_pass http://app:8080;
+    }
 }
