--- a/reddit-clone/pyproject.toml
+++ b/reddit-clone/pyproject.toml
@@ -14,10 +14,10 @@ celery = {extras = ["redis", "librabbitmq"], version = "^5.1"}
 alembic = "^1.7"
 asyncpg = "^0.24"
 graphql-relay = "^3.1"
-schematics = "^2.1"
 jinja2 = "^3.0"
 aiofiles = "^0.7"
 starlette = "^0.16"
+marshmallow = "^3.14.0"
 
 
 [tool.poetry.dev-dependencies]
