--- a/reddit-clone/docker-compose.yml
+++ b/reddit-clone/docker-compose.yml
@@ -59,15 +59,15 @@ services:
     container_name: reddit-postgres
     restart: always
     environment:
-      POSTGRES_DB: reddit
-      POSTGRES_PASSWORD: reddit
       POSTGRES_USER: reddit
+      POSTGRES_PASSWORD: reddit
+      POSTGRES_DB: reddit
     networks:
       - reddit-main
     ports:
       - 5432:5432
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - ./data/postgres:/var/lib/postgresql/data
 
   redis:
     image: redis:6.2-alpine
@@ -80,7 +80,7 @@ services:
     ports:
       - 6379:6379
     volumes:
-      - redis-data:/data
+      - ./data/redis:/data
     healthcheck:
       test: redis-cli ping
       interval: 15s
@@ -99,20 +99,12 @@ services:
     ports:
       - 5672:5672
     volumes:
-      - rabbitmq-data:/data
+      - ./data/rabbitmq:/data
     healthcheck:
       test: rabbitmq-diagnostics -q ping
       interval: 15s
       retries: 5
       timeout: 5s
-
-volumes:
-  redis-data:
-    driver: local
-  rabbitmq-data:
-    driver: local
-  postgres-data:
-    driver: local
 
 networks:
   reddit-main:
