--- a/fastapi/pyproject.toml
+++ b/fastapi/pyproject.toml
@@ -13,11 +13,17 @@ fastapi = "^0.104.1"
 
 [tool.poetry.dev-dependencies]
 black = "^23.11"
-flake8 = "^6.1.0"
-flake8-black = "^0.3.6"
-flake8-bugbear = "^23.9.16"
 mypy = "^1.7.0"
+ruff = "^0.0.47"
 
 [build-system]
 requires = ["poetry-core>=1.8.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 88
+select = [
+    "F401",
+    "F403",
+    "E501",
+]
