--- a/fastapi-sqlalchemy/pyproject.toml
+++ b/fastapi-sqlalchemy/pyproject.toml
@@ -5,13 +5,12 @@ description = ""
 authors = ["Jonathan Kim <jkimbo@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-uvicorn = {extras = ["standard"], version = "^0.15.0"}
+python = "^3.11.1"
+uvicorn = {extras = ["standard"], version = "^0.23.2"}
 SQLAlchemy = {extras = ["mypy"], version = "^1.4.23"}
 alembic = "^1.7.1"
-strawberry-graphql = {extras = ["asgi"], version = "^0.77.0"}
-fastapi = "^0.68.1"
-
+strawberry-graphql = {extras = ["asgi"], version = "^0.216.0"}
+fastapi = "^0.110.0" # se non parte "poetry install" togliere fastapi e aggiungerlo dopo
 
 [tool.poetry.dev-dependencies]
 black = "^21.8b0"
@@ -23,3 +22,7 @@ mypy = "^0.910"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.poetry.scripts]
+start = "main:start"
